# py-image-upscaler

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/image_upsizer/: __init__.py  cli.py  upscaler.py  weights.py
tests/: test_basic.py
